@@ -7321,6 +7321,29 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|params
+operator|.
+name|getBool
+argument_list|(
+literal|"includeDynamic"
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
+name|fieldProperties
+operator|.
+name|addAll
+argument_list|(
+name|getDynamicFields
+argument_list|(
+name|params
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|topLevel
 operator|.
 name|add
@@ -7330,6 +7353,53 @@ argument_list|,
 name|fieldProperties
 argument_list|)
 expr_stmt|;
+name|topLevel
+operator|.
+name|add
+argument_list|(
+name|DYNAMIC_FIELDS
+argument_list|,
+name|getDynamicFields
+argument_list|(
+name|params
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|topLevel
+operator|.
+name|add
+argument_list|(
+name|COPY_FIELDS
+argument_list|,
+name|getCopyFieldProperties
+argument_list|(
+literal|false
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|topLevel
+return|;
+block|}
+DECL|method|getDynamicFields
+specifier|private
+name|List
+argument_list|<
+name|SimpleOrderedMap
+argument_list|<
+name|Object
+argument_list|>
+argument_list|>
+name|getDynamicFields
+parameter_list|(
+name|SolrParams
+name|params
+parameter_list|)
+block|{
 name|List
 argument_list|<
 name|SimpleOrderedMap
@@ -7346,8 +7416,6 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|IndexSchema
-operator|.
 name|DynamicField
 name|dynamicField
 range|:
@@ -7393,33 +7461,8 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|topLevel
-operator|.
-name|add
-argument_list|(
-name|DYNAMIC_FIELDS
-argument_list|,
-name|dynamicFieldProperties
-argument_list|)
-expr_stmt|;
-name|topLevel
-operator|.
-name|add
-argument_list|(
-name|COPY_FIELDS
-argument_list|,
-name|getCopyFieldProperties
-argument_list|(
-literal|false
-argument_list|,
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-expr_stmt|;
 return|return
-name|topLevel
+name|dynamicFieldProperties
 return|;
 block|}
 comment|/**    * Returns a list of copyField directives, with optional details and optionally restricting to those    * directives that contain the requested source and/or destination field names.    *     * @param showDetails If true, source and destination dynamic bases, and explicit fields matched by source globs,    *                    will be added to dynamic copyField directives where appropriate    * @param requestedSourceFields If not null, output is restricted to those copyField directives    *                              with the requested source field names     * @param requestedDestinationFields If not null, output is restricted to those copyField directives    *                                   with the requested destination field names     * @return a list of copyField directives     */
