@@ -18,19 +18,6 @@ package|;
 end_package
 begin_import
 import|import
-name|com
-operator|.
-name|carrotsearch
-operator|.
-name|randomizedtesting
-operator|.
-name|annotations
-operator|.
-name|Seed
-import|;
-end_import
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -49,15 +36,6 @@ operator|.
 name|junit
 operator|.
 name|Test
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
 import|;
 end_import
 begin_class
@@ -109,6 +87,38 @@ argument_list|,
 literal|"/fields/[1]/name=='HTMLwhitetok'"
 argument_list|,
 literal|"/fields/[2]/name=='_version_'"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testJsonGetAllFieldsIncludeDynamic
+specifier|public
+name|void
+name|testJsonGetAllFieldsIncludeDynamic
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertJQ
+argument_list|(
+literal|"/schema/fields?indent=on&includeDynamic=true"
+argument_list|,
+literal|"/fields/[0]/name=='HTMLstandardtok'"
+argument_list|,
+literal|"/fields/[1]/name=='HTMLwhitetok'"
+argument_list|,
+literal|"/fields/[2]/name=='_version_'"
+argument_list|,
+literal|"/fields/[98]/name=='*_d'"
+argument_list|,
+literal|"/fields/[97]/name=='*_f'"
+argument_list|,
+literal|"/fields/[96]/name=='*_b'"
+argument_list|,
+literal|"/fields/[95]/name=='*_t'"
+argument_list|,
+literal|"/fields/[94]/name=='*_l'"
 argument_list|)
 expr_stmt|;
 block|}
